@@ -3,6 +3,7 @@
 
 int main (void)
 {
+  CFAbsoluteTime at;
   CFLocaleRef loc;
   CFStringRef str;
   CFDateFormatterRef fmt;
@@ -17,10 +18,31 @@ int main (void)
   
   str = CFDateFormatterCreateStringWithAbsoluteTime (NULL, fmt, 65.0);
   PASS_CFEQ(str, CFSTR("Montag, 1. Januar 2001 00:01"),
-    "Absolute time can be formatted.");
+    "Absolute time can be formatted using full date style.");
   CFRelease(str);
   
+  PASS(CFDateFormatterGetAbsoluteTimeFromString (fmt,
+        CFSTR("Montag, 1. Januar 2011 23:00"), NULL, &at),
+    "Absolute time gotten for 2/1/2003");
+  PASS(at == 315615600.0,
+    "Absolute time for Montag, 1. Januar 2011 23:00 is 315615600.0");
   
+  CFRelease(fmt);
+  
+  fmt = CFDateFormatterCreate (NULL, loc, kCFDateFormatterNoStyle,
+    kCFDateFormatterNoStyle);
+  str = CFDateFormatterCreateStringWithAbsoluteTime (NULL, fmt, 65.0);
+  PASS_CFEQ(str, CFSTR("20010101 12:01 vorm."),
+    "Absolute time can be formatted using no date style.");
+  CFRelease(str);
+  
+  PASS(CFDateFormatterGetAbsoluteTimeFromString (fmt, CFSTR("20050403 02:01 vorm."), NULL, &at),
+    "Absolute time gotten for 20050403 02:01 vorm.");
+  PASS(at == 134186460.0,
+    "Absolute time for 20050403 02:01 vorm. is 134186460.0");
+  
+  CFRelease(fmt);
+  CFRelease(loc);
   
   return 0;
 }
